--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -27,7 +27,7 @@
 
 
 
-    
+
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -42,6 +42,15 @@
       src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
+    ></script>
+    <!-- If you want to have css or javascript or images, any static file, you would add them like this
+         The type of the file, in this case text/javascript AND
+         the source of the file, using the pathname and name of the file
+         The {{ }} tell jinja that there is Python code in here to be executed
+    -->
+    <script
+        type="text/javascript"
+        src="{{ url_for('static', filename='index.js') }}"
     ></script>
     {% endblock %}
   </body>
