--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -34,8 +34,10 @@
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
           <a class="nav-item nav-link" id="home" href="/">Home</a>
+          <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           <a class="nav-item nav-link" id="login" href="/login">Login</a>
           <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
+
         </div>
       </div>
     </nav>
@@ -64,6 +66,5 @@
       type="text/javascript"
       src="{{ url_for('static', filename='index.js') }}"
     ></script>
-
   </body>
 </html>
