--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -27,6 +27,6 @@
     </div>
 
     <br />
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Login</button>
 </form>
 {% endblock %}
