begin form for adding notes

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,5 +2,8 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<h1>This is the homepage</h1>
+<form method="POST">
+    <textarea name="note" id="note" class="form-control"></textarea>
+
+</form>
 {% endblock %}
